kubernetes/base/media-server/bases/jellyfin/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:10.10.1.20241103-155831
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: media-do-block
              mountPath: /media
      volumes:
        - name: media-do-block
          persistentVolumeClaim:
            claimName: media-files-do-block
