kubernetes/base/media-server/bases/jellyfin/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
